--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
   <title>InfoStories</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/uni1.svg">
+  <link id="favicon" rel="icon" type="image/x-icon" href="assets/favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-
 
 <body id="main">
   <app-root></app-root>
